--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,13 +17,23 @@
     <Grid>
         <materialDesign:Card Margin="20" Background="{DynamicResource MaterialDesignPaper}">
             <StackPanel>
-                <TextBox Margin="0 50 0 0" x:Name="txtOperario" Width="300" FontSize="18" 
+                <TextBlock x:Name="txtMensaje" Text="Maderas / Sierolam" 
+                           Style="{StaticResource MaterialDesignBody1TextBlock}"
+                           FontSize="18"></TextBlock>
+                <TextBox Margin="0 100 0 0" x:Name="txtOperario" Width="300" FontSize="18" 
                              materialDesign:HintAssist.Hint="Introduzca el operario" BorderThickness="2"
                              BorderBrush="{DynamicResource MaterialDesignDivider}"
                              Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
                 <Button Margin="0 20 0 0" x:Name="btnAceptar" Style="{StaticResource MaterialDesignFlatMidBgButton}" 
                         Width="300" Height="53" FontSize="18" Content="Aceptar"
                         materialDesign:ShadowAssist.ShadowDepth="Depth0"></Button>
+                <Button HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0 10 0 0" Width="150" Height="150">
+                    <materialDesign:PackIcon Kind="Home" Margin="5" Width="100" Height="100"/>
+                </Button>
+                <!-- Botón 2 -->
+                <Button  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0 10 0 0" Width="150" Height="150">
+                    <materialDesign:PackIcon Kind="Settings" Margin="5" Width="100" Height="100"/>
+                </Button>
             </StackPanel>
         </materialDesign:Card>
     </Grid>
